--- a/main.html
+++ b/main.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
 </head>
 
 <body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
@@ -16,8 +19,20 @@
         <a href="">News</a>
     </header>
     <div>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/VOGUE_LOGO.svg"
-            style="width: 170px; height: 50px; margin: 20px; padding-top: 50px;">
+        <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/VOGUE_LOGO.svg/799px-VOGUE_LOGO.svg.png" 
+        style="max-width: 300px; transition: opacity 0.3s; margin-top: 35px;">
+        <script>
+            $(document).ready(function() {
+                $("#image").hover(
+                    function() { // Mouse enter
+                        $(this).css("opacity", "0.5");
+                    },
+                    function() { // Mouse leave
+                        $(this).css("opacity", "1");
+                    }
+                );
+            });
+        </script>
         <div class="SearchInput">
             <input class="input1" input="text" placeholder="Search Vogue...">
             <button class="btn1">Submit</buton>
@@ -25,7 +40,13 @@
     </div>
     <div class="Main">
         <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\main.html">FASHION</a>
-        <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\beauty.html">BEAUTY</a>
+        <a href="#" id="BeautyLink">BEAUTY</a>
+        <script>
+            document.getElementById("BeautyLink").onclick = function(event) {
+                event.preventDefault(); //
+                window.location.href = "beauty.html";
+            };
+        </script>
         <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\culture.html">CULTURE</a>
         <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\living.html">LIVING</a>
         <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\wedding.html">WEDDINGS</a>
@@ -234,7 +255,7 @@
             <br>
             <input class="Message" type="text" placeholder="Message" style="margin-bottom: 15px;">
             <br>
-            <button class="btn2">Submit</button>
+            <button type="button" class="btn2 btn-info">Submit</button>
         </div>
         </div>
     </div>
