--- a/living.html
+++ b/living.html
@@ -6,31 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="living.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 
 <body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
     <header>
-        <a href="">Sign Up</a>
-        <a href="">Login</a>
+        <a href="#" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign Up</a>
+        <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
         <a href="">Magazine</a>
         <a href="">News</a>
     </header>
     <div>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/VOGUE_LOGO.svg"
-            style="width: 170px; height: 50px; margin: 20px; padding-top: 50px;">
+        <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/VOGUE_LOGO.svg/799px-VOGUE_LOGO.svg.png" 
+        style="max-width: 300px; transition: opacity 0.3s; margin-top: 35px;">
         <div class="SearchInput">
             <input class="input1" input="text" placeholder="Search Vogue...">
-            <button class="btn1">Submit</buton>
+            <button class="btn1">Submit</button>
         </div>
     </div>
     <div class="Main">
-        <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\main.html">FASHION</a>
-        <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\beauty.html">BEAUTY</a>
-        <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\culture.html">CULTURE</a>
-        <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\living.html">LIVING</a>
-        <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\wedding.html">WEDDINGS</a>
-        <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\runway.html">RUNWAY</a>
-        <a href="C:\Users\salii\OneDrive\Desktop\Flutura\Projects\Project\shopping.html">SHOPPING</a>
+        <a href="main.html">MAIN</a>
+        <a href="beauty.html">BEAUTY</a>
+        <a href="culture.html">CULTURE</a>
+        <a href="living.html">LIVING</a>
+        <a href="wedding.html">WEDDINGS</a>
+        <a href="runway.html">RUNWAY</a>
+        <a href="shopping.html">SHOPPING</a>
     </div>
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
         <img src="https://assets.vogue.com/photos/66b1161a813ae068db9455de/master/w_1280,c_limit/JK_FARMHOUSE_656w-edit%20(1).jpg" style="width: 65%;">
@@ -237,6 +239,56 @@
         </div>
         </div>
     </div>
+
+    <div class="modal fade" id="signUpModal" tabindex="-1" aria-labelledby="signUpModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="signUpModalLabel">Sign Up</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="signUpEmail" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="signUpEmail" placeholder="Enter your email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="signUpPassword" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="signUpPassword" placeholder="Enter your password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Sign Up</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="loginEmail" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="loginPassword" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
 
